# wavShanonPWM

./: .gitignore  CMakeLists.txt  README  add_class.py  compile.sh  postTreat.pro
include/: WaveFile.h  waveforme.h
src/: WaveFile.cpp  main.cpp  waveforme.cpp
